fix broken styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 :root {
-    --White: hsl(0, 0%, 100%)
-    --Slate300: hsl(212, 45%, 89%)
-    --Slate500: hsl(216, 15%, 48%)
-    --Slate900: hsl(218, 44%, 22%)
+  --White: hsl(0, 0%, 100%);
+  --Slate300: hsl(212, 45%, 89%);
+  --Slate500: hsl(216, 15%, 48%);
+  --Slate900: hsl(218, 44%, 22%);
 }
 * {
   padding: 0;
@@ -37,8 +37,9 @@ main {
 }
 .card {
   background-color: var(--White);
-  width: min(250px, 300px);
+  width: min(15rem, 18rem);
   padding: 1rem;
+  /* height: 100px; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -58,10 +59,10 @@ main {
 }
 .card-img img {
   width: 100%;
-  height: 10%;
+  height: 12rem;
   border-radius: 0.8rem;
 }
 .text-center {
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.95rem;
 }
